# RayCast

./: .clang-format  CMakeLists.txt  Controller.cpp  Controller.h  ControllerWidget.cpp  ControllerWidget.h  MainWindow.cpp  MainWindow.h  Polygon.cpp  Polygon.h  README.md  Ray.cpp  Ray.h  icon.qrc  main.cpp
.github/workflows/: cmake.yml
